--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="logo">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRljSvP-z2Hp1YucrbzZyCwUXvOu8GMOnMjbw&usqp=CAU">
         </div>
-        <div class="container" id="overlay">
+        <div class="container" id="wild">
           <div id="header">
                 <nav>
                     <ul>
@@ -59,6 +59,7 @@
         </div>
           <div  id="about">
             <h2>About Us</h2>
+            <h3>header 3</h3>
             <p>We pride our selves in rich experience in organising nature based experiences in 4 countries of Africa.I.e Kenya, Uganda and South Africa.
               <br>We offer both tailor-made and customised private services.
                We ensure that our services meet the client's expectations. Value for money is key in our daily activities.</p>
